fix columnas not responsive

--- a/design.scss
+++ b/design.scss
@@ -110,7 +110,7 @@ a {
 }
 
 .dosColumnas {
-    max-width: 50%;
+    width: 50%;
     &__titulo{
         font-size: 25px;
         color: rgb(32, 32, 32);
@@ -124,10 +124,33 @@ a {
     }
 }
 
+.recetario {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
+    .iframeStyle {
+        width: 80%;
+        height: 450px;
+        object-fit: contain;
+    }
+}
+
+.iframeStyleMap {
+    width: 100%;
+    height: 400px;
+    object-fit: contain;
+}
+
+.contenedorIframe {
+    width: 50%;
+}
+
 .dosColumnasContenido {
     display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Contactos formulario */
@@ -339,7 +362,6 @@ input[type=submit]:hover {
     }
 }
 
-
 @media screen and (max-width: 488px) {
     * {
         $row-height: 200px;
@@ -347,6 +369,10 @@ input[type=submit]:hover {
 
     .cont-galeria {
         grid-template-columns: 1fr;
+    }
+
+    .dosColumnasContenido {
+        flex-direction: column;
     }
 
     .navegadorHome>img {
